--- a/src/pages/admin/timetable.html
+++ b/src/pages/admin/timetable.html
@@ -34,8 +34,9 @@
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
     <title>OKS Interface</title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
-    <link href="/assets/css/Navigation-with-Button.scss" rel="stylesheet">
+    <link href="/manifest.webmanifest" rel="manifest">
+    <link href="/assets/css/Navigation-with-Button.css" rel="stylesheet">
+    <link href="/assets/css/timeTable.css" rel="stylesheet">
 </head>
 
 <body>
@@ -61,20 +62,69 @@
         </div>
     </nav>
 </div>
-<div class="container" id='tableContainer'>
+<div class="container" id='container'>
     <div class="row" id="daysContainer">
         <div class="col" id="day-0">
             <h5>Loading....</h5>
         </div>
     </div>
 </div>
+
+<div id="detailBox" onclick="closeDetailView()"></div>
+<div id="detailFrame">
+    <button class="btn" id="detailCloseButton" onclick="closeDetailView();">X</button>
+    <div class="container">
+        <div class="row">
+            <div class="col" style="min-width: 300px;">
+                <div class="row">
+                    <div class="col">
+                        <h4><span style="font-weight: bold;"><span id="detailViewCourseName"></span></span></h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Info: <span id="detailViewStatus">Keine Änderung</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <span id="detailViewLesson"></span>. Stunde
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Raum: <span id="detailViewRoom"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="col" style="min-width: 300px;">
+                <h4><span style="font-weight: bold;">Aushänge:</span></h4>
+                <div class="row">
+                    <div class="col" id="detailViewAnnouncement">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- CDN
 <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="/assets/js/main.ts"></script>
-<script src="/assets/js/utilities/databaseConnector.ts"></script>
-<script src="/assets/js/utilities/apiConnector.ts"></script>
-<script src="/assets/js/presentation/admin/timeTable.ts"></script>
+-->
+<script src="/assets/ext/jquery-3.3.1.slim.min.js"></script>
+<script src="/assets/ext/popper.min.js"></script>
+<script src="/assets/ext/bootstrap.min.js"></script>
+<!-- SELF -->
+<script src="/assets/scripts/ServiceworkerConnector.js"></script>
+<script src="/assets/scripts/ApiConnector.js"></script>
+<script src="/assets/scripts/DatabaseConnector.js"></script>
+<script src="/assets/scripts/User.js"></script>
+<script src="/assets/scripts/Utilities.js"></script>
+<script src="/assets/scripts/Global.js"></script>
+<script src="/assets/scripts/admin/timetable/AdminTimeTable.js"></script>
+<script src="/assets/scripts/timeTable/TimeTable.js"></script>
+<script src="/assets/scripts/admin/timetable/AdminTimeTablePage.js"></script>
 
 </body>
 
