--- a/src/pages/admin/users.html
+++ b/src/pages/admin/users.html
@@ -82,7 +82,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="stundenplan.html">Stundenplan</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="timetable.html">Stundenplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="vertretungen.html">Vertretungsplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aushang.html">Aushang</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Benutzerverwaltung</a></li>
