--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -127,7 +127,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <button class="btn btn-info">Moodle</button>
+            <button class="btn btn-info" id="moodlebtn">Moodle</button>
         </div>
     </div>
     <div class="row">
