added page controller and view

--- a/src/pages/exams.html
+++ b/src/pages/exams.html
@@ -55,7 +55,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="../timeTable.html">Stundenplan</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="timeTable.html">Stundenplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Klausuren</a></li>
                     <li class="dropdown nav-item"><a aria-expanded="false" class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">Weitere Dienste</a>
                         <div class="dropdown-menu" role="menu">
@@ -68,13 +68,12 @@
                 </ul>
                 <span class="navbar-text actions"></span>
             </div>
-            <a class="btn btn-light action-button" href="../settings.html" role="button">Einstellungen</a>
+            <a class="btn btn-light action-button" href="settings.html" role="button">Einstellungen</a>
         </div>
     </nav>
 </div>
-<div id="mainFrame">
-    <ul class="list-group" id="mainUL">
-    </ul>
+<div id="mainContainer" class="container">
+    Wird geladen ... ... ...
 </div>
 <!-- CDN
 <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -91,6 +90,8 @@
 <script src="/assets/scripts/DatabaseConnector.js"></script>
 <script src="/assets/scripts/Utilities.js"></script>
 <script src="/assets/scripts/Global.js"></script>
+<script src="/assets/scripts/exams/ListView.js"></script>
+<script src="/assets/scripts/exams/examsPage.js"></script>
 
 </body>
 
