--- a/src/pages/timeTable.html
+++ b/src/pages/timeTable.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Stundenplan</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="student/exams.html">Klausuren</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="exams.html">Klausuren</a></li>
                     <li class="dropdown nav-item"><a aria-expanded="false" class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">Weitere Dienste</a>
                         <div class="dropdown-menu" role="menu">
                             <a class="dropdown-item" href="https://moodle.paeda.biz" role="presentation" target="_blank">Moodle</a>
