--- a/src/pages/admin/vertretungen.html
+++ b/src/pages/admin/vertretungen.html
@@ -34,7 +34,7 @@
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
     <title>OKS Interface</title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
+    <link href="/manifest.webmanifest" rel="manifest">
     <link href="/assets/css/Navigation-with-Button.scss" rel="stylesheet">
 </head>
 
@@ -49,7 +49,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="stundenplan.html">Stundenplan</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="timetable.html">Stundenplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Vertretungsplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aushang.html">Aushang</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="users.html">Benutzerverwaltung</a></li>
