updated telegram linker

--- a/src/pages/linkTelegram.html
+++ b/src/pages/linkTelegram.html
@@ -69,9 +69,12 @@
 <script src="/assets/ext/popper.min.js"></script>
 <script src="/assets/ext/bootstrap.min.js"></script>
 <!-- SELF -->
-<script src="/assets/js/utilities/serviceWorkerConnector.ts"></script>
-<script src="/assets/js/utilities/apiConnector.ts"></script>
-<script src="/assets/js/main.ts"></script>
-<script src="/assets/js/presentation/linkTelegram.ts"></script>
+<script src="/assets/scripts/ServiceworkerConnector.js"></script>
+<script src="/assets/scripts/ApiConnector.js"></script>
+<script src="/assets/scripts/DatabaseConnector.js"></script>
+<script src="/assets/scripts/User.js"></script>
+<script src="/assets/scripts/Utilities.js"></script>
+<script src="/assets/scripts/Global.js"></script>
+<script src="/assets/scripts/linkTelegram/linkTelegramPage.js"></script>
 
 </html>
