--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -96,8 +96,8 @@
             <img id="qrCodeImg">
             <br>
             <br>
-            <input id="totpCode" placeholder="Hier den generierten Code eingeben (000 000)">
-            <button class="btn btn-success" onclick="Settings.global.submitValidationCode()">Weiter</button>
+            <input id="totpCode" placeholder="TOTP eingeben (000 000)">
+            <button class="btn btn-success" id="buttonTwoFactorCodeEntry" disabled>Weiter</button>
         </div>
     </div>
     <br>
