--- a/src/pages/timeTable.html
+++ b/src/pages/timeTable.html
@@ -49,7 +49,7 @@
 <div id="navBarContainer">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
         <div class="container">
-            <a class="navbar-brand" href="student/index.html">S-Plan</a>
+            <a class="navbar-brand" href="timeTable.html">S-Plan</a>
             <button class="navbar-toggler" data-target="#navcol-1" data-toggle="collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="navbar-toggler-icon"></span>
