--- a/src/pages/admin/users.html
+++ b/src/pages/admin/users.html
@@ -169,7 +169,7 @@
             <label for="ProfileDetailLastname">Nachname</label>
             <input class="form-control" disabled id="ProfileDetailLastname" placeholder="Lastname" type="text">
         </div>
-        <div class="form-group">
+        <div class="form-group" hidden>
             <label for="ProfileDetailMail">Mailaddress</label>
             <input class="form-control" disabled id="ProfileDetailMail" placeholder="not set" type="email">
         </div>
