--- a/src/pages/timeTable.html
+++ b/src/pages/timeTable.html
@@ -43,6 +43,8 @@
     <link href="/assets/ext/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/global.css" rel="stylesheet">
     <link href="/assets/css/timeTable.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
