--- a/src/pages/admin/aushang.html
+++ b/src/pages/admin/aushang.html
@@ -96,7 +96,7 @@
                     <input class="form-control" id="dateInput" type="date">
                 </td>
                 <td>
-                    <input class="form-control" type="checkbox" id="onDisplay">
+                    <input class="form-control" id="onDisplay" type="checkbox">
                 </td>
                 <td>
                     <textarea class="form-control" id="announcementContent"></textarea>
