--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -82,7 +82,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <button class="btn btn-light" id="twoFactorButton" disabled>Wird geladen...</button>
+            <button class="btn btn-light" disabled id="twoFactorButton">Wird geladen...</button>
         </div>
     </div>
     <div class="row">
@@ -97,7 +97,7 @@
             <br>
             <br>
             <input id="totpCode" placeholder="TOTP eingeben (000 000)">
-            <button class="btn btn-success" id="buttonTwoFactorCodeEntry" disabled>Weiter</button>
+            <button class="btn btn-success" disabled id="buttonTwoFactorCodeEntry">Weiter</button>
         </div>
     </div>
     <br>
