--- a/src/pages/exams.html
+++ b/src/pages/exams.html
@@ -72,7 +72,7 @@
         </div>
     </nav>
 </div>
-<div id="mainContainer" class="container">
+<div class="container" id="mainContainer">
     Wird geladen ... ... ...
 </div>
 <!-- CDN
